--- a/.scripts/install
+++ b/.scripts/install
@@ -1,1 +1,6 @@
-
+#!/bin/bash
+sudo pacman -Syu sway sixel chafa foot firefox vlc zip unzip git mesa xorg-xwayland feh bemenu-wayland bemenu zathura
+git clone https://aur.archlinux.org/paru.git
+cd paru
+makepkg -si
+paru -Syu swww-git lf-sixel-git adwaita-dark adwaita-qt5-git adwaita-qt6-git python-pywal
